--- a/package.json
+++ b/package.json
@@ -14,8 +14,12 @@
     "lodash": "^4.17.15",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-items-carousel": "^2.7.0",
     "react-redux": "^7.0.3",
+    "react-responsive-carousel": "^3.1.50",
+    "react-slick": "^0.25.2",
     "redux": "^4.0.1",
+    "slick-carousel": "^1.8.1",
     "superagent": "^3.8.3",
     "superagent-promise": "^1.1.0",
     "wretch": "^1.4.1"
