--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,7 @@
   ],
   "parser": "babel-eslint",
   "rules": {
-    "max-len": ["warn", { "code": 120 }]
+    "max-len": ["warn", { "code": 120 }],
+    "at-rule-empty-line-before": null
   }
 }
