--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lodash": "^4.17.15",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-icons": "^3.7.0",
     "react-items-carousel": "^2.7.0",
     "react-redux": "^7.0.3",
     "react-responsive-carousel": "^3.1.50",
